--- a/src/index.css
+++ b/src/index.css
@@ -130,3 +130,19 @@
 .animate-gradient {
   animation: gradient 2s ease infinite;
 }
+
+@keyframes gradient-text {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.animate-gradient-text {
+  animation: gradient-text 5s ease infinite;
+}
